--- a/app/src/main/res/layout-h480dp/activity_leader_board.xml
+++ b/app/src/main/res/layout-h480dp/activity_leader_board.xml
@@ -35,13 +35,13 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/activity_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:fontFamily="@font/montserrat"
-            android:text="Leaderboard"
+            android:text="@string/leaderboard"
             android:textColor="@color/white"
-            android:id="@+id/activity_title"
             android:textSize="18sp"
             android:textStyle="bold" />
         <RelativeLayout
@@ -99,7 +99,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="All Time"
+                        android:text="@string/all_time"
                         android:textSize="14sp"
                         android:textColor="@color/white"
                         android:fontFamily="@font/arimo"/>
@@ -120,7 +120,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Weekly"
+                        android:text="@string/weekly"
                         android:textSize="14sp"
                         android:textColor="@color/white"
                         android:fontFamily="@font/arimo"/>
@@ -141,7 +141,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Daily"
+                        android:text="@string/daily"
                         android:textSize="14sp"
                         android:textColor="@color/white"
                         android:fontFamily="@font/arimo"/>
@@ -166,7 +166,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Country"
+                        android:text="@string/daily"
                         android:textSize="14sp"
                         android:textColor="@color/white"
                         android:fontFamily="@font/arimo"/>
@@ -213,7 +213,7 @@
             android:id="@+id/empty_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Leaderboard is not available"
+            android:text="@string/leaderboard_is_not_available"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:visibility="gone"
