--- a/app/src/main/res/layout-h720dp/amount_item.xml
+++ b/app/src/main/res/layout-h720dp/amount_item.xml
@@ -1,42 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
     android:layout_marginTop="1dp"
-    >
+    android:layout_marginRight="5dp"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/t1"
         android:layout_width="match_parent"
-        android:background="@drawable/ic_hexnow"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@drawable/ic_hexnow">
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:src="@drawable/hexagon"
                 android:layout_centerInParent="true"
-                app:tint="@color/white"/>
+                android:src="@drawable/hexagon"
+                app:tint="@color/white" />
 
             <TextView
                 android:id="@+id/position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
-                android:layout_centerVertical="true"
-                android:textSize="13sp"
                 android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:fontFamily="@font/montserrat"
+                android:text="1"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:fontFamily="@font/montserrat"/>
+                android:textSize="13sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
@@ -45,13 +44,13 @@
             android:id="@+id/amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$500"
-            android:textSize="16sp"
-            android:layout_marginRight="20dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/fjalla_one"/>
+            android:layout_marginRight="20dp"
+            android:fontFamily="@font/fjalla_one"
+            android:text="$500"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
