--- a/app/src/main/res/layout/wrong_answer_layout.xml
+++ b/app/src/main/res/layout/wrong_answer_layout.xml
@@ -1,199 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:id="@+id/rootview"
     android:background="@color/basic_color"
+    android:gravity="center">
 
-
-
-    >
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp">
 
         <LinearLayout
-            android:id="@+id/background"
+            android:id="@+id/exit_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="30dp"
-            android:paddingBottom="30dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/cancel_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="30dp"
-                    android:src="@drawable/ic_outline_cancel_24" />
-
-                <RelativeLayout
-                    android:id="@+id/close_dialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/hexagon"
-                        app:tint="@color/white" />
-
-                    <ImageView
-
-                        android:id="@+id/close"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_baseline_close_24"
-                        app:tint="@color/black" />
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/fjalla_one"
-                android:gravity="center"
-                android:text="@string/you_missed_the_correct_answer"
-                android:textSize="20sp"
-                android:textColor="@color/white"
-
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/dailyTxt"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:fontFamily="@font/arimo"
-                    android:gravity="center"
-                    android:text="@string/continue_by_watching_ad"
-                    android:textColor="@color/blue_gray"
-                    android:textSize="20sp" />
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:orientation="vertical"
-
-
-                >
-
-
-                <RelativeLayout
-                    android:id="@+id/play_again"
-
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="2"
-
-
-                    android:background="@drawable/hex_green"
-                    android:padding="10dp"
-
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="0dp"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-
-
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="@string/continue_"
-                            android:textColor="@color/white"
-                            android:textSize="20dp"
-
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:layout_width="100dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="15dp"
-
-                            android:src="@drawable/vicon2" />
-                    </LinearLayout>
-                </RelativeLayout>
-
-
-                <RelativeLayout
-
-
-                    android:id="@+id/give_up"
-
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="0dp"
-
-                    android:layout_marginBottom="30dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/ic_hexnow"
-                    android:padding="10dp">
-
-
-                    <TextView
-                        android:id="@+id/more_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/give_up"
-                        android:textColor="@color/white"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="30dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_outline_cancel_24" />
 
         </LinearLayout>
 
-    </ScrollView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/fjalla_one"
+            android:gravity="center"
+            android:text="@string/you_missed_the_correct_answer"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="@string/continue_by_watching_ad"
+            android:textColor="@color/blue_gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:id="@+id/continue_game"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/hex_green"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/continue_"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="15dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/vicon2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/give_up"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/ic_hexnow"
+            android:gravity="center"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/give_up"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
