--- a/app/src/main/res/layout-h300dp/activity_game3.xml
+++ b/app/src/main/res/layout-h300dp/activity_game3.xml
@@ -30,7 +30,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
                     android:contentDescription="@string/app_name"
                     android:src="@drawable/hexagon"
                     app:tint="@color/basic_color" />
