--- a/app/src/main/res/layout-h1024dp/item_options.xml
+++ b/app/src/main/res/layout-h1024dp/item_options.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_cont"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
     android:background="@drawable/ic_hexnow_1"
-    android:orientation="vertical"
     android:padding="10dp">
 
     <RelativeLayout
         android:id="@+id/label_container"
         android:layout_width="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_height="wrap_content">
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/hexagon" />
@@ -30,7 +29,6 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -46,7 +44,6 @@
         android:layout_toEndOf="@id/label_container"
         android:textColor="@color/white"
         android:textSize="18sp" />
-
 
 </RelativeLayout>
 
