--- a/app/src/main/res/layout-h1024dp/item_progress.xml
+++ b/app/src/main/res/layout-h1024dp/item_progress.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="70dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="1dp"
     android:layout_marginRight="5dp"
@@ -11,11 +11,13 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/hexagon"
